--- a/style.scss
+++ b/style.scss
@@ -54,7 +54,13 @@ img {
 }
 
 .wrapper {
-    max-width: px;
+    max-width: 1100px;
+    margin-inline: auto;
+    padding-inline: 20px;
+}
+
+.inner {
+    max-width: 640px;
     margin-inline: auto;
     padding-inline: 20px;
 }
