--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 @use'./_mixin.scss' as mx;
 
 // --------------------------------------
@@ -9,7 +8,7 @@ $white: #FFFFFF;
 $yellow: #DB8405;
 $blue: #80A0B1;
 $light-grey: #F6F6F6;
-$dark-grey: #808080;
+$grey:#E8E8E8;
 $navy: #283038;
 
 // --------------------------------------
@@ -178,6 +177,7 @@ img {
     max-width: 1100px;
     margin-inline: auto;
     padding-inline: 20px;
+    margin-bottom: 80px;
 }
 
 .inner {
