--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -6,6 +6,7 @@
 $black: #333333;
 $white: #FFFFFF;
 $yellow: #DB8405;
+$light-yellow: #FEF1DD;
 $blue: #80A0B1;
 $light-grey: #F6F6F6;
 $grey:#E8E8E8;
