--- a/style.css
+++ b/style.css
@@ -42,7 +42,8 @@ a {
 img {
   width: 100%;
   vertical-align: bottom;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .section-title {
@@ -144,6 +145,178 @@ img {
   max-width: 640px;
   margin-inline: auto;
   padding-inline: 20px;
+}
+
+.fv {
+  width: 100%;
+  height: calc(100vh - 72px);
+  overflow: hidden;
+  position: relative;
+  margin-bottom: 80px;
+}
+.fv video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  -o-object-fit: cover;
+     object-fit: cover;
+  z-index: -1;
+}
+.fv .title {
+  font-size: 5rem;
+  font-weight: 700;
+}
+.fv .title span {
+  display: inline-block;
+  background-color: #FFFFFF;
+  padding: 15px;
+}
+.fv .title span:nth-child(1) {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  border-radius: 20px 20px 20px 0;
+}
+.fv .title span:nth-child(3) {
+  position: absolute;
+  top: 100px;
+  left: 20px;
+  border-radius: 0 0 20px 20px;
+}
+
+.purpose {
+  margin-bottom: 90px;
+}
+.purpose .section-title {
+  text-align: center;
+  margin-bottom: 50px;
+}
+.purpose .section-title span {
+  display: inline-block;
+  font-size: 1.2rem;
+  position: relative;
+}
+.purpose .section-title span::before {
+  width: 8px;
+  height: 8px;
+  position: absolute;
+  top: 50%;
+  left: -14px;
+  transform: translateY(-50%);
+  content: "";
+  background-color: #DB8405;
+  border-radius: 50%;
+}
+.purpose .purpose-list {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+  padding: 0;
+}
+.purpose .purpose-list li a {
+  display: flex;
+  align-items: center;
+  background-color: #FFFFFF;
+  border-radius: 20px;
+  box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.25);
+  padding: 10px;
+}
+.purpose .purpose-list li a img {
+  width: 50px;
+  height: 50px;
+  margin-right: 10px;
+}
+.purpose .purpose-list li a .box-title span {
+  display: block;
+  font-size: 1.2rem;
+}
+
+.before-after .message span {
+  color: #DB8405;
+}
+.before-after .list {
+  display: flex;
+  justify-content: space-between;
+}
+.before-after .list li {
+  position: relative;
+  flex: 1;
+  background-color: #FFFFFF;
+  box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.25);
+  border-radius: 20px;
+  padding: 10px 20px;
+  margin-right: 20px;
+}
+.before-after .list li:last-child {
+  margin-right: 0;
+}
+.before-after .list li img {
+  height: 200px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 20px;
+}
+.before-after .list li .middle span {
+  display: block;
+  font-size: 1.2rem;
+}
+.before-after .list li .right {
+  text-align: right;
+}
+.before-after .list li .arrow {
+  width: 50px;
+  height: 30px;
+  position: absolute;
+  left: 10px;
+  bottom: 60px;
+}
+.before-after .list li .arrow img {
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.before-after .list li .small {
+  text-align: center;
+}
+
+.reason .section-title span {
+  position: relative;
+  display: block;
+  font-size: 1.2rem;
+  margin-top: 10px;
+  margin-left: 20px;
+}
+.reason .section-title span::before {
+  width: 8px;
+  height: 8px;
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: -14px;
+  transform: translateY(-50%);
+  background-color: #DB8405;
+  border-radius: 50%;
+}
+.reason .list {
+  margin-top: 50px;
+}
+.reason .list .item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 25px;
+}
+.reason .list .item .left {
+  width: 30%;
+  margin-right: 15px;
+}
+.reason .list .item .right {
+  width: 70%;
+}
+.reason .list .item .right .box-title {
+  color: #DB8405;
 }
 
 .about #fv {
@@ -502,7 +675,8 @@ img {
 .company #sns .flex-right ul li .icon img {
   height: 160px;
   width: 160px;
-  object-fit: contain;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 .company #sns .flex-right ul li .text {
   width: 70%;
@@ -581,7 +755,8 @@ img {
 .company footer .contact .flex img {
   display: block;
   width: 20%;
-  object-fit: contain;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 .company footer .contact .flex p {
   color: #FFFFFF;
@@ -788,6 +963,7 @@ header .header-menu .line {
   right: 80px;
   transition: 0.4s ease;
   padding: 5px 15px;
+  z-index: 100;
 }
 header .header-menu .line:hover {
   opacity: 0.8;
@@ -799,6 +975,7 @@ header .header-menu .hamburger_fixed {
   top: 32px;
   right: 30px;
   cursor: pointer;
+  z-index: 100;
 }
 header .header-menu .hamburger_fixed:hover span:nth-child(1), header .header-menu .hamburger_fixed:hover span:nth-child(3) {
   transform: translateX(5px);
