WIP: 現在作業中の変更を一旦コミット

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -70,6 +70,8 @@ body {
     letter-spacing: $ls-base;
     overflow-x: hidden;
     color: $black;
+    background-color: $white;
+    color: $black;
 }
 
 li {
